--- a/index.html
+++ b/index.html
@@ -167,175 +167,132 @@
   </div>
 
   <footer>© <span id="year"></span> BroChat AzA Takaful Zurich</footer>
+<script>
+// ======================
+// 🕌 WAKTU SOLAT (eSolat JAKIM)
+// ======================
+document.getElementById("negeriSelect").addEventListener("change", async ()=>{
+  const zone = document.getElementById("negeriSelect").value;
+  const result = document.getElementById("solatResult");
+  if(!zone) return;
+  result.textContent = "⏳ Memuatkan waktu solat...";
+  try {
+    const res = await fetch(`https://www.e-solat.gov.my/index.php?r=esolatApi/takwimsolat&period=today&zone=${zone}`);
+    const data = await res.json();
+    const d = data.prayerTime[0];
+    result.innerHTML = `
+      🌅 Subuh: <b>${d.fajr}</b><br>
+      ☀️ Zohor: <b>${d.dhuhr}</b><br>
+      🌇 Asar: <b>${d.asr}</b><br>
+      🌆 Maghrib: <b>${d.maghrib}</b><br>
+      🌃 Isyak: <b>${d.isha}</b><br>
+      📅 ${d.date}
+    `;
+  } catch (err) {
+    console.error(err);
+    result.textContent = "❌ Gagal memuatkan waktu solat (API eSolat).";
+  }
+});
 
-  <script>
-    
-  document.getElementById("year").textContent = new Date().getFullYear();
+// ======================
+// 🎯 KUIZ ZURICH TAKAFUL
+// ======================
+const quizData = [
+  {
+    question: "Apakah perlindungan utama Z-Motor?",
+    options: [
+      "Kemalangan, kebakaran & kecurian",
+      "Hanya kemalangan kecil",
+      "Cermin depan sahaja",
+      "Servis tahunan percuma"
+    ],
+    answer: 0
+  },
+  {
+    question: "Z-Rider sesuai untuk siapa?",
+    options: [
+      "Penunggang motosikal",
+      "Pemilik lori",
+      "Pemilik rumah",
+      "Peniaga restoran"
+    ],
+    answer: 0
+  },
+  {
+    question: "Z-Drive Assist menawarkan bantuan apa?",
+    options: [
+      "Bantuan tepi jalan & towing",
+      "Takaful nyawa",
+      "Diskaun servis tayar",
+      "Insurans rumah"
+    ],
+    answer: 0
+  },
+  {
+    question: "Skuter boleh dilindungi di bawah produk mana?",
+    options: [
+      "Z-Rider",
+      "Z-Drive Assist",
+      "Z-Travel",
+      "Z-FireBiz"
+    ],
+    answer: 0
+  }
+];
 
-  // ==============================
-  // 📅 Waktu Solat & Cuaca
-  // ==============================
-  const negeriList = {
-    "WLY01": "Kuala Lumpur", "SGR01": "Selangor", "JHR01": "Johor",
-    "KDH01": "Kedah", "KTN01": "Kelantan", "MLK01": "Melaka",
-    "NSN01": "Negeri Sembilan", "PHG01": "Pahang", "PRK01": "Perak",
-    "PLS01": "Perlis", "PNG01": "Pulau Pinang", "SBH01": "Sabah",
-    "SWK01": "Sarawak", "TRG01": "Terengganu", "LBN01": "Labuan"
-  };
-  const negeriSelect = document.getElementById("negeriSelect");
-  Object.entries(negeriList).forEach(([code, name])=>{
-    const opt = document.createElement("option");
-    opt.value = code; opt.textContent = name;
-    negeriSelect.appendChild(opt);
+let currentQuiz = 0;
+let score = 0;
+
+const quizBox = document.getElementById("quizBox");
+const quizQuestion = document.getElementById("quizQuestion");
+const quizOptions = document.getElementById("quizOptions");
+const startBtn = document.getElementById("startQuiz");
+
+function loadQuiz() {
+  const q = quizData[currentQuiz];
+  quizQuestion.textContent = q.question;
+  quizOptions.innerHTML = "";
+  q.options.forEach((opt, i) => {
+    const btn = document.createElement("button");
+    btn.textContent = opt;
+    btn.className = "produk-btn";
+    btn.onclick = () => checkAnswer(i);
+    quizOptions.appendChild(btn);
   });
+}
 
-  negeriSelect.addEventListener("change", async ()=>{
-    const zone = negeriSelect.value;
-    if(!zone) return;
-    const result = document.getElementById("solatResult");
-    result.textContent = "⏳ Memuatkan...";
-    try {
-      const res = await fetch(`https://api.waktusolat.app/v2/solat/${zone}`);
-      const data = await res.json();
-      const d = data.prayerTime[0];
-      result.innerHTML = `
-        🌅 Subuh: <b>${d.Subuh}</b><br>
-        ☀️ Zohor: <b>${d.Zohor}</b><br>
-        🌇 Asar: <b>${d.Asar}</b><br>
-        🌆 Maghrib: <b>${d.Maghrib}</b><br>
-        🌃 Isyak: <b>${d.Isyak}</b><br>
-        📅 ${d.Tarikh}
-      `;
-    } catch {
-      result.textContent = "❌ Gagal memuatkan waktu solat.";
-    }
-  });
-
-  // Cuaca
-  const cuacaDiv = document.getElementById("cuacaResult");
-  if(navigator.geolocation){
-    navigator.geolocation.getCurrentPosition(async(pos)=>{
-      const {latitude, longitude} = pos.coords;
-      try {
-        const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${latitude}&longitude=${longitude}&current=temperature_2m`);
-        const data = await res.json();
-        cuacaDiv.textContent = `🌡️ Suhu semasa: ${data.current.temperature_2m}°C`;
-      } catch {
-        cuacaDiv.textContent = "❌ Tidak dapat muatkan cuaca.";
-      }
-    }, ()=> cuacaDiv.textContent="📍 Sila aktifkan lokasi untuk lihat cuaca.");
+function checkAnswer(selected) {
+  if (selected === quizData[currentQuiz].answer) score++;
+  currentQuiz++;
+  if (currentQuiz < quizData.length) {
+    loadQuiz();
   } else {
-    cuacaDiv.textContent = "Peranti tidak sokong lokasi.";
+    quizBox.innerHTML = `
+      <h3>🎉 Kuiz Tamat!</h3>
+      <p>Skor anda: <b>${score}/${quizData.length}</b></p>
+      <button class="produk-btn" onclick="restartQuiz()">Main Semula</button>
+    `;
   }
+}
 
-  // ==============================
-  // 💼 Produk Zurich Info
-  // ==============================
-  const produk = {
-    zdrive: "Perlindungan komprehensif bagi kenderaan termasuk bantuan tepi jalan & towing.",
-    zmotor: "Perlindungan menyeluruh untuk kereta daripada kemalangan, kebakaran, kecurian.",
-    zrider: "Takaful khas untuk penunggang motosikal dengan perlindungan kemalangan diri.",
-    zpa: "Perlindungan 24 jam terhadap kemalangan diri & kecederaan tidak dijangka.",
-    ztravel: "Perlindungan perjalanan termasuk kelewatan penerbangan & kecemasan perubatan.",
-    zfirebiz: "Lindungi premis perniagaan daripada risiko kebakaran & bencana."
-  };
+function restartQuiz() {
+  currentQuiz = 0;
+  score = 0;
+  quizBox.innerHTML = `
+    <p id="quizQuestion" class="quiz-question">Uji pengetahuan anda tentang takaful!</p>
+    <div id="quizOptions" class="quiz-options"></div>
+    <button id="startQuiz" class="btn">Mula Kuiz</button>
+  `;
+  document.getElementById("startQuiz").addEventListener("click", startQuiz);
+}
 
-  const modal = document.getElementById("modal");
-  const info = document.getElementById("produkInfo");
-  const closeModal = document.getElementById("closeModal");
-  const form = document.getElementById("quoteForm");
+function startQuiz() {
+  startBtn.style.display = "none";
+  loadQuiz();
+}
 
-  document.querySelectorAll(".produk-btn").forEach(btn=>{
-    btn.addEventListener("click", ()=>{
-      const id = btn.dataset.produk;
-      info.innerHTML = `<h3>${btn.textContent}</h3><p>${produk[id]}</p>`;
-      modal.classList.add("show");
-    });
-  });
-
-  closeModal.onclick = ()=> modal.classList.remove("show");
-
-  form.addEventListener("submit",(e)=>{
-    e.preventDefault();
-    const nama = document.getElementById("nama").value;
-    const telefon = document.getElementById("telefon").value;
-    const email = document.getElementById("email").value;
-    alert(`Terima kasih ${nama}! Kami akan hubungi anda di ${telefon} / ${email} secepat mungkin.`);
-    modal.classList.remove("show");
-    form.reset();
-  });
-
-  // ==============================
-  // 🎯 Kuiz Zurich Takaful - Kenderaan
-  // ==============================
-  const quizData = [
-    {
-      question: "Apakah perlindungan utama dalam pelan Z-Motor?",
-      options: ["Kemalangan & kecurian", "Penyakit kritikal", "Perjalanan antarabangsa"],
-      answer: 0
-    },
-    {
-      question: "Z-Rider direka khas untuk siapa?",
-      options: ["Pemilik kereta", "Penunggang motosikal", "Pemandu lori"],
-      answer: 1
-    },
-    {
-      question: "Z-Drive Assist menawarkan bantuan apa?",
-      options: ["Kewangan", "Tepi jalan & towing", "Perubatan"],
-      answer: 1
-    },
-    {
-      question: "Skuter bawah 250cc sesuai dengan pelan apa?",
-      options: ["Z-Motor", "Z-Rider", "Z-Travel"],
-      answer: 1
-    },
-    {
-      question: "Apakah manfaat utama memiliki Takaful Kenderaan?",
-      options: ["Perlindungan kerugian harta", "Ganjaran lumayan", "Pelaburan saham"],
-      answer: 0
-    }
-  ];
-
-  const startBtn = document.getElementById("startQuiz");
-  const quizBox = document.getElementById("quizBox");
-  const quizQuestion = document.getElementById("quizQuestion");
-  const quizOptions = document.getElementById("quizOptions");
-
-  let current = 0;
-  let score = 0;
-
-  startBtn.addEventListener("click", ()=>{
-    startBtn.style.display = "none";
-    loadQuestion();
-  });
-
-  function loadQuestion(){
-    if(current >= quizData.length){
-      quizBox.innerHTML = `
-        <h3>🎉 Tamat Kuiz!</h3>
-        <p>Markah anda: <b>${score}/${quizData.length}</b></p>
-        <button onclick="location.reload()">Main Semula</button>
-      `;
-      return;
-    }
-    const q = quizData[current];
-    quizQuestion.textContent = q.question;
-    quizOptions.innerHTML = "";
-    q.options.forEach((opt, i)=>{
-      const btn = document.createElement("button");
-      btn.textContent = opt;
-      btn.className = "btn";
-      btn.style.margin = "5px";
-      btn.onclick = ()=> checkAnswer(i);
-      quizOptions.appendChild(btn);
-    });
-  }
-
-  function checkAnswer(i){
-    if(i === quizData[current].answer) score++;
-    current++;
-    loadQuestion();
-  }
+startBtn.addEventListener("click", startQuiz);
 </script>
+  
 </body>
 </html>
