--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
   </select>
   <div id="solatResult">Sila pilih negeri untuk lihat waktu solat.</div>
   <div id="cuacaResult">Memuatkan cuaca...</div>
-
+  
+<div id="solatResult" class="solat-box"></div>
+<div id="cuacaBox" class="cuaca-box"></div>
+  
   <div class="produk-section">
     <h2>💼 Produk Zurich Takaful</h2>
     <button class="produk-btn" data-produk="zdrive">Z-Drive Assist</button>
