--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
       padding: 0;
       min-height: 100vh;
     }
-    h1 {
-      margin-top: 20px;
-    }
+    h1 { margin-top: 20px; }
     select, button, input, textarea {
       padding: 10px 15px;
       margin: 8px;
@@ -24,20 +22,15 @@
       border-radius: 8px;
       font-size: 16px;
     }
-    select {
-      background: white;
-      color: #0d47a1;
-    }
-    .card {
-      background: rgba(255,255,255,0.1);
-      border-radius: 15px;
+    select { background: white; color: #0d47a1; }
+    #solatResult, #cuacaBox {
       margin: 15px auto;
-      padding: 15px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 12px;
+      padding: 10px;
       width: 90%;
-      max-width: 420px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
     }
-    h2 { margin-top: 10px; }
+    .produk-section { margin-top: 30px; padding: 10px; }
     .produk-btn {
       display: block;
       background: white;
@@ -49,77 +42,45 @@
       font-weight: bold;
       transition: 0.2s;
     }
-    .produk-btn:hover {
-      background: #bbdefb;
-      transform: scale(1.03);
-    }
+    .produk-btn:hover { background: #bbdefb; transform: scale(1.03); }
+
     /* Modal */
     .modal {
-      position: fixed;
-      inset: 0;
+      position: fixed; inset: 0;
       background: rgba(0,0,0,0.7);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      visibility: hidden;
-      opacity: 0;
-      transition: 0.3s;
-      z-index: 1000;
+      display: flex; align-items: center; justify-content: center;
+      visibility: hidden; opacity: 0;
+      transition: 0.3s; z-index: 1000;
     }
     .modal.show { visibility: visible; opacity: 1; }
     .modal-content {
-      background: white;
-      color: #0d47a1;
-      border-radius: 15px;
-      padding: 20px;
-      width: 90%;
-      max-width: 420px;
-      text-align: left;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+      background: white; color: #0d47a1;
+      border-radius: 15px; padding: 20px;
+      width: 90%; max-width: 420px;
+      text-align: left; box-shadow: 0 4px 20px rgba(0,0,0,0.3);
     }
-    .close {
-      float: right;
-      font-weight: bold;
-      cursor: pointer;
-      color: #1976d2;
-    }
+    .close { float: right; font-weight: bold; cursor: pointer; color: #1976d2; }
     .close:hover { color: red; }
-    footer {
-      margin-top: 30px;
-      font-size: 14px;
-      opacity: 0.7;
+    #quoteForm { margin-top: 15px; display: flex; flex-direction: column; }
+    #quoteForm input, #quoteForm textarea {
+      margin: 6px 0; border: 1px solid #ccc;
+      border-radius: 6px; padding: 8px;
+      font-size: 15px; width: 100%;
     }
+    #quoteForm button {
+      background: #1976d2; color: white; font-weight: bold;
+    }
+    #quoteForm button:hover { background: #0d47a1; }
+    footer { margin-top: 30px; font-size: 14px; opacity: 0.7; }
   </style>
 </head>
 <body>
   <h1>🕌 Waktu Solat & Cuaca</h1>
+  <select id="negeriSelect"><option value="">-- Pilih Negeri --</option></select>
+  <div id="solatResult">Sila pilih negeri untuk lihat waktu solat.</div>
+  <div id="cuacaBox">Memuatkan cuaca...</div>
 
-  <div class="card">
-    <select id="negeriSelect">
-      <option value="">-- Pilih Negeri --</option>
-      <option>Johor</option>
-      <option>Kedah</option>
-      <option>Kelantan</option>
-      <option>Melaka</option>
-      <option>Negeri Sembilan</option>
-      <option>Pahang</option>
-      <option>Perak</option>
-      <option>Perlis</option>
-      <option>Pulau Pinang</option>
-      <option>Sabah</option>
-      <option>Sarawak</option>
-      <option>Selangor</option>
-      <option>Terengganu</option>
-      <option>W.P. Kuala Lumpur</option>
-      <option>W.P. Putrajaya</option>
-      <option>W.P. Labuan</option>
-    </select>
-
-    <div id="solatBox" class="card">Sila pilih negeri untuk lihat waktu solat.</div>
-    <div id="cuacaBox" class="card">Memuatkan cuaca...</div>
-  </div>
-
-  <div class="card">
+  <div class="produk-section">
     <h2>💼 Produk Zurich Takaful</h2>
     <button class="produk-btn" data-produk="zdrive">Z-Drive Assist</button>
     <button class="produk-btn" data-produk="zmotor">Z-Motor</button>
@@ -127,14 +88,14 @@
     <button class="produk-btn" data-produk="zpa">Personal Accident</button>
     <button class="produk-btn" data-produk="ztravel">Z-Travel</button>
     <button class="produk-btn" data-produk="zfirebiz">Fire Takaful (Business)</button>
-  </div>
+  </div> 
 
   <section id="quizSection" class="card">
-    <h2>🎯 Kuiz Zurich Takaful</h2>
-    <div id="quizBox">
-      <p id="quizQuestion">Uji pengetahuan anda tentang takaful!</p>
-      <div id="quizOptions"></div>
-      <button id="startQuiz" class="produk-btn">Mula Kuiz</button>
+    <div class="card-header"><h2>🎯 Kuiz Zurich Takaful</h2></div>
+    <div id="quizBox" class="quiz-box">
+      <p id="quizQuestion" class="quiz-question">Uji pengetahuan anda tentang takaful!</p>
+      <div id="quizOptions" class="quiz-options"></div>
+      <button id="startQuiz" class="btn">Mula Kuiz</button>
     </div>
   </section>
 
@@ -142,160 +103,124 @@
     <div class="modal-content">
       <span class="close" id="closeModal">&times;</span>
       <div id="produkInfo"></div>
+
+      <form id="quoteForm">
+        <h4>📄 Request Quotation</h4>
+        <input type="text" id="nama" placeholder="Nama penuh" required />
+        <input type="tel" id="telefon" placeholder="No. Telefon" required />
+        <input type="email" id="email" placeholder="Email" required />
+        <textarea id="mesej" placeholder="Mesej tambahan (optional)" rows="3"></textarea>
+        <button type="submit">Hantar Permohonan</button>
+      </form>
     </div>
   </div>
 
   <footer>© <span id="year"></span> BroChat AzA Takaful Zurich</footer>
 
 <script>
-// ===================== TARIKH
-document.getElementById("year").textContent = new Date().getFullYear();
+// ======================
+// 📅 SENARAI NEGERI
+// ======================
+const negeriList = {
+  "WLY01": { name: "Kuala Lumpur", lat: 3.139, lon: 101.6869 },
+  "SGR01": { name: "Selangor", lat: 3.0738, lon: 101.5183 },
+  "JHR01": { name: "Johor", lat: 1.4927, lon: 103.7414 },
+  "KDH01": { name: "Kedah", lat: 6.1184, lon: 100.3685 },
+  "KTN01": { name: "Kelantan", lat: 6.1254, lon: 102.2381 },
+  "MLK01": { name: "Melaka", lat: 2.1896, lon: 102.2501 },
+  "NSN01": { name: "Negeri Sembilan", lat: 2.7258, lon: 101.9424 },
+  "PHG01": { name: "Pahang", lat: 3.8126, lon: 103.3256 },
+  "PRK01": { name: "Perak", lat: 4.5921, lon: 101.0901 },
+  "PLS01": { name: "Perlis", lat: 6.4433, lon: 100.2048 },
+  "PNG01": { name: "Pulau Pinang", lat: 5.4164, lon: 100.3327 },
+  "SBH01": { name: "Sabah", lat: 5.9788, lon: 116.0753 },
+  "SWK01": { name: "Sarawak", lat: 1.5533, lon: 110.3592 },
+  "TRG01": { name: "Terengganu", lat: 5.3292, lon: 103.137 },
+  "LBN01": { name: "Labuan", lat: 5.2831, lon: 115.2308 }
+};
 
-// ===================== WAKTU SOLAT FIX (API)
-async function getWaktuSolat(negeri) {
-  const solatBox = document.getElementById("solatBox");
-  solatBox.innerHTML = "⏳ Memuatkan waktu solat...";
+const negeriSelect = document.getElementById("negeriSelect");
+Object.entries(negeriList).forEach(([code, info])=>{
+  const opt = document.createElement("option");
+  opt.value = code; opt.textContent = info.name;
+  negeriSelect.appendChild(opt);
+});
 
-  const zoneCodes = {
-    "Johor": "JHR01","Kedah": "KDH01","Kelantan": "KTN01","Melaka": "MLK01",
-    "Negeri Sembilan": "NGS01","Pahang": "PHG01","Perak": "PRK01","Perlis": "PLS01",
-    "Pulau Pinang": "PNG01","Sabah": "SBH01","Sarawak": "SWK01","Selangor": "SGR01",
-    "Terengganu": "TRG01","W.P. Kuala Lumpur": "WLY01","W.P. Putrajaya": "WLY02","W.P. Labuan": "WLY03"
-  };
-  const zone = zoneCodes[negeri];
-  if (!zone) return (solatBox.innerHTML = "⚠️ Zon negeri tidak dijumpai.");
-
-  try {
-    const res = await fetch(`https://corsproxy.io/?https://api.waktusolat.app/v2/solat/${zone}`);
-    const data = await res.json();
-    const w = data.prayerTime[0];
-    const toTime = ts => new Date(ts * 1000).toLocaleTimeString("ms-MY", { hour: "2-digit", minute: "2-digit" });
-
-    solatBox.innerHTML = `
-      <h3>📍 ${data.zone}</h3>
-      🌅 Subuh: ${toTime(w.fajr)}<br>
-      ☀️ Syuruk: ${toTime(w.syuruk)}<br>
-      🕌 Zohor: ${toTime(w.dhuhr)}<br>
-      🌇 Asar: ${toTime(w.asr)}<br>
-      🌆 Maghrib: ${toTime(w.maghrib)}<br>
-      🌃 Isyak: ${toTime(w.isha)}<br>
-      <small>📅 ${w.hijri}</small>
-    `;
-  } catch (err) {
-    solatBox.innerHTML = "❌ Gagal memuatkan waktu solat.";
-  }
-}
-
-// ===================== CUACA
-async function getCuaca(lat, lon) {
+// ======================
+// 🕌 WAKTU SOLAT + ☁️ CUACA
+// ======================
+negeriSelect.addEventListener("change", async ()=>{
+  const zone = negeriSelect.value;
+  const result = document.getElementById("solatResult");
   const cuacaBox = document.getElementById("cuacaBox");
+  if(!zone) return;
+  const { lat, lon, name } = negeriList[zone];
+  result.textContent = "⏳ Memuatkan waktu solat...";
+  cuacaBox.textContent = "⏳ Memuatkan cuaca semasa...";
+
   try {
-    const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current=temperature_2m,weather_code,wind_speed_10m`);
-    const cuaca = await res.json();
-    const c = cuaca.current;
-    const weatherDesc = weatherIcon(c.weather_code);
-    cuacaBox.innerHTML = `
-      ${weatherDesc.icon} ${weatherDesc.text}<br>
-      🌡️ Suhu: ${c.temperature_2m}°C<br>
-      💨 Angin: ${c.wind_speed_10m} km/j
+    const res = await fetch(`https://www.e-solat.gov.my/index.php?r=esolatApi/takwimsolat&period=today&zone=${zone}`);
+    const data = await res.json();
+    const d = data.prayerTime[0];
+    result.innerHTML = `
+      <b>📍 ${name}</b><br>
+      🌅 Subuh: <b>${d.fajr}</b><br>
+      ☀️ Zohor: <b>${d.dhuhr}</b><br>
+      🌇 Asar: <b>${d.asr}</b><br>
+      🌆 Maghrib: <b>${d.maghrib}</b><br>
+      🌃 Isyak: <b>${d.isha}</b><br>
+      📅 ${d.date}
     `;
   } catch {
-    cuacaBox.innerHTML = "❌ Gagal memuatkan cuaca.";
-  }
-}
-
-function weatherIcon(code) {
-  const w = {0:["☀️","Cerah"],1:["🌤️","Sedikit berawan"],2:["⛅","Berawan"],3:["☁️","Mendung"],61:["🌧️","Hujan sederhana"],95:["⛈️","Ribut petir"]};
-  return {icon:w[code]?.[0]||"🌡️",text:w[code]?.[1]||"Cuaca tidak diketahui"};
-}
-
-// ===================== NEGERI PILIHAN
-const negeriSelect = document.getElementById("negeriSelect");
-negeriSelect.addEventListener("change", ()=>{
-  const negeri = negeriSelect.value;
-  const coords = {
-    "Johor": [1.49,103.74],"Kedah": [6.12,100.37],"Kelantan": [6.12,102.24],
-    "Melaka": [2.19,102.25],"Negeri Sembilan": [2.73,101.94],"Pahang": [3.81,103.33],
-    "Perak": [4.59,101.09],"Perlis": [6.44,100.20],"Pulau Pinang": [5.41,100.33],
-    "Sabah": [5.98,116.07],"Sarawak": [1.55,110.36],"Selangor": [3.07,101.52],
-    "Terengganu": [5.33,103.14],"W.P. Kuala Lumpur": [3.14,101.69],
-    "W.P. Putrajaya": [2.93,101.69],"W.P. Labuan": [5.28,115.23]
-  };
-  if (coords[negeri]) {
-    getWaktuSolat(negeri);
-    getCuaca(coords[negeri][0], coords[negeri][1]);
+    result.textContent = "❌ Gagal memuatkan waktu solat.";
   }
 });
 
-// ===================== PRODUK INFO (Popup + Form)
-const produkInfo = {
-  zdrive: "🚗 <b>Z-Drive Assist</b> menawarkan bantuan tepi jalan, towing & khidmat kecemasan 24 jam.",
-  zmotor: "🏍️ <b>Z-Motor</b> melindungi kenderaan anda daripada kemalangan, kecurian & kebakaran.",
-  zrider: "🛵 <b>Z-Rider</b> untuk penunggang motosikal & skuter dengan perlindungan menyeluruh.",
-  zpa: "🧍 <b>Personal Accident (PA)</b> perlindungan diri 24/7 terhadap kemalangan & kecederaan.",
-  ztravel: "🧳 <b>Z-Travel</b> perlindungan perjalanan dalam & luar negara – kelewatan, kehilangan bagasi.",
-  zfirebiz: "🏢 <b>Fire Takaful (Business)</b> melindungi premis perniagaan daripada kebakaran & kerugian aset."
+// ======================
+// 💼 PRODUK INFO POPUP
+// ======================
+const produkInfoData = {
+  zdrive: "🚗 <b>Z-Drive Assist</b><br>Bantuan tepi jalan 24 jam, towing, dan sokongan kecemasan untuk pemandu.",
+  zmotor: "🏍️ <b>Z-Motor</b><br>Perlindungan menyeluruh untuk kenderaan bermotor terhadap kemalangan, kecurian dan kebakaran.",
+  zrider: "🛵 <b>Z-Rider</b><br>Perlindungan khas untuk penunggang motosikal dan skuter.",
+  zpa: "💼 <b>Personal Accident</b><br>Perlindungan kemalangan diri untuk individu dan keluarga.",
+  ztravel: "✈️ <b>Z-Travel</b><br>Perlindungan perjalanan domestik dan antarabangsa.",
+  zfirebiz: "🏢 <b>Fire Takaful (Business)</b><br>Perlindungan aset perniagaan daripada kebakaran dan risiko lain."
 };
 
 const modal = document.getElementById("modal");
-const modalContent = document.getElementById("produkInfo");
 const closeModal = document.getElementById("closeModal");
+const produkInfo = document.getElementById("produkInfo");
 
 document.querySelectorAll(".produk-btn").forEach(btn=>{
-  btn.addEventListener("click",()=>{
+  btn.addEventListener("click", ()=>{
     const key = btn.dataset.produk;
-    if(produkInfo[key]){
-      modalContent.innerHTML = `
-        ${produkInfo[key]}
-        <hr>
-        <h4>🧾 Request Quotation</h4>
-        <form id="quoteForm">
-          <label>Nama Penuh:</label><br>
-          <input type="text" id="nama" placeholder="Contoh: Ahmad Razin" required style="width:95%;padding:8px;border-radius:6px;border:1px solid #ccc;"><br><br>
-          <label>No. Telefon:</label><br>
-          <input type="tel" id="telefon" placeholder="Contoh: 0123456789" required style="width:95%;padding:8px;border-radius:6px;border:1px solid #ccc;"><br><br>
-          <label>Jenis Perlindungan:</label><br>
-          <select id="coverage" style="width:95%;padding:8px;border-radius:6px;border:1px solid #ccc;">
-            <option>Perlindungan Penuh</option>
-            <option>Third Party</option>
-            <option>Kemalangan Diri</option>
-          </select><br><br>
-          <button type="submit" style="background:#0d47a1;color:white;padding:10px 20px;border:none;border-radius:8px;">Hantar</button>
-        </form>
-        <div id="successMsg" style="display:none;color:green;margin-top:10px;font-weight:bold;">✅ Permintaan telah dihantar!</div>
-      `;
-
-      // Tambah event listener form hantar
-      const form = modalContent.querySelector("#quoteForm");
-      form.addEventListener("submit", e=>{
-        e.preventDefault();
-        form.style.display = "none";
-        modalContent.querySelector("#successMsg").style.display = "block";
-        setTimeout(()=>modal.classList.remove("show"), 2500);
-      });
-
-      modal.classList.add("show");
-    }
+    produkInfo.innerHTML = produkInfoData[key] || "Maklumat tidak dijumpai.";
+    modal.classList.add("show");
   });
 });
-
 closeModal.onclick = ()=> modal.classList.remove("show");
+window.onclick = e=>{ if(e.target===modal) modal.classList.remove("show"); };
 
-// ===================== KUIZ
-const quizData=[
-  {question:"Apakah perlindungan utama Z-Motor?",options:["Kemalangan, kebakaran & kecurian","Cermin depan sahaja","Takaful hayat"],answer:0},
-  {question:"Z-Rider sesuai untuk siapa?",options:["Penunggang motosikal","Pemilik rumah","Peniaga restoran"],answer:0},
-  {question:"Z-Drive Assist menawarkan bantuan apa?",options:["Bantuan tepi jalan & towing","Takaful nyawa"],answer:0}
-];
-let currentQuiz=0,score=0;
-const quizBox=document.getElementById("quizBox");
-const quizQ=document.getElementById("quizQuestion");
-const quizO=document.getElementById("quizOptions");
-const startBtn=document.getElementById("startQuiz");
-function loadQuiz(){const q=quizData[currentQuiz];quizQ.textContent=q.question;quizO.innerHTML="";q.options.forEach((opt,i)=>{const b=document.createElement("button");b.textContent=opt;b.className="produk-btn";b.onclick=()=>checkAnswer(i);quizO.appendChild(b);});}
-function checkAnswer(i){if(i===quizData[currentQuiz].answer)score++;currentQuiz++;if(currentQuiz<quizData.length)loadQuiz();else quizBox.innerHTML=`<h3>🎉 Kuiz Tamat!</h3><p>Skor anda: <b>${score}/${quizData.length}</b></p><button class='produk-btn' onclick='location.reload()'>Main Semula</button>`;}
-startBtn.onclick=()=>{startBtn.style.display="none";loadQuiz();}
-</script>
+// ======================
+// 📱 AUTO WHATSAPP FORM
+// ======================
+document.getElementById("quoteForm").addEventListener("submit", (e)=>{
+  e.preventDefault();
+  const nama = document.getElementById("nama").value.trim();
+  const telefon = document.getElementById("telefon").value.trim();
+  const email = document.getElementById("email").value.trim();
+  const mesej = document.getElementById("mesej").value.trim();
+  const produk = produkInfo.textContent.match(/Z-[A-Za-z]+/)?.[0] || "Zurich Takaful";
   
+  const text = `Assalamualaikum, saya nak minta quotation produk ${produk}.%0A`+
+               `Nama: ${nama}%0A`+
+               `Telefon: ${telefon}%0A`+
+               `Email: ${email}%0A`+
+               `Mesej: ${mesej}`;
+  
+  window.open(`https://wa.me/60192506999?text=${text}`, "_blank");
+});
+</script>
 </body>
 </html>
